# kotoba

./: .eslintrc.json  .gitignore  .prettierignore  DEPENDENCIES.md  README.md  TODO.md  cspell.json  jest.config.js  nodemon.json  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  webpack.config.js
app/: app.tsx  index.tsx
app/api/: api_common.ts  client_dict.ts  client_subtitle.ts  client_video.ts  common.ts  entries.ts  events.ts  graphql.ts  index.ts  video.ts  video_client.ts
app/components/: demo.tsx  home.tsx  list.scss  list.tsx  saved_state.ts  video.tsx  (+5 more)
config/: app.json
data/: README.md  jmdict_english.md
importer/: files.ts  frequency.ts  import.ts  jlpt.ts  jmdict.ts  kanjidic.ts  kirei.ts  pitch.ts  util.ts
kotoba-server/: Cargo.toml  Rocket.toml
kotoba-server/src/: app.rs  graph.rs  graphql.rs  main.rs  server.rs
lib/: entities.ts  entries.ts  files.ts  filter.ts  index.ts  subtitles.ts  util.test.ts  util.ts  video_types.ts
lib-ts/: filter.test.ts  list.ts  testutil.ts  util.test.ts
public/: index.html
server-node/: app.ts  config.ts  event_dispatcher.ts  graph.test.ts  kana-test.ts  main.test.ts  main.ts  media.ts  player.ts  serve_events.ts  serve_subtitle.ts  serve_video.ts  sqlite.ts  store.ts
src/: api_video.ts  app.ts  config.ts  event_dispatcher.ts  events.ts  graph.test.ts  graph.ts  lib.ts  main.test.ts  main.ts  media.ts  mpv-properties.md  mpv.ts  player.ts  serve_events.ts  serve_subtitle.ts  serve_video.ts  server.ts  sqlite.ts  store.ts  video.ts
testdata/: kana-test.txt
web/: index.html  index.ts
(+92 files in other folders)
