[package]
name = "kotoba-server"
version = "0.1.0"
edition = "2018"
authors = ["ax-lab"]
license = "MIT"
description = "Kotoba Server"
repository = "https://github.com/ax-lab/kotoba"
keywords = ["japanese", "dictionary"]

[dependencies]
actix-web = "3.3.2"
juniper = "0.15.3"
lazy_static = "1.4.0"
serde = "1.0.124"
serde_json = "1.0.64"
tokio = { version = "1.12.0", features = ["full"] }
